# rusty-chess

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  test-local.sh
client/: Cargo.toml
client/src/: local.rs  main.rs
client/src/display/: board_display.rs  mod.rs
server/: Cargo.toml
server/migrations/: 20260102_001_create_users.sql  20260102_002_create_games.sql  20260102_003_create_moves.sql
server/src/: config.rs  error.rs  lib.rs  main.rs
server/src/chess/: game_state.rs  mod.rs  notation.rs  validator.rs
server/src/db/: games.rs  mod.rs  moves.rs  users.rs
server/src/handlers/: auth.rs  games.rs  mod.rs
server/src/middleware/: auth.rs
server/src/models/: game.rs  mod.rs  move_record.rs  user.rs
server/src/services/: auth_service.rs  game_service.rs  mod.rs
shared/: Cargo.toml
shared/src/protocol/: mod.rs  requests.rs  responses.rs  ws_messages.rs
shared/src/types/: game.rs  mod.rs  move.rs  user.rs
