[package]
name = "rusty-chess-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rusty-chess-client"
path = "src/main.rs"

[[bin]]
name = "rusty-chess-local"
path = "src/local.rs"

[dependencies]
# Workspace shared
shared = { path = "../shared" }

# From workspace
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chess = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }

# Client-specific
futures-util = "0.3"
